--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ html {
 }
 
 .hero {
-  padding: 72px;
+  padding: 72px 0;
 }
 
 .hero__container {
@@ -114,4 +114,41 @@ html {
 
 .btn_filled {
   background: #3882f6;
+}
+
+/* Main */
+.section {
+  padding: 72px 0;
+}
+
+.section__info {
+  color: #1f2937;
+}
+
+.heading-secondary {
+  font-size: 36px;
+  font-weight: 700;
+}
+
+.info__heading {
+  text-align: center;
+  margin-bottom: 36px;
+}
+
+.info__cards {
+  display: flex;
+  justify-content: space-between;
+  gap: 16px;
+}
+
+.card {
+  text-align: center;
+  flex: 0 1 200px;
+}
+
+.card__image {
+  border: 3px solid #3882f6;
+  height: 200px;
+  margin-bottom: 16px;
+  border-radius: 16px;
 }
