--- a/style.css
+++ b/style.css
@@ -200,3 +200,14 @@ html {
 .cta-box__heading {
   margin-bottom: 8px;
 }
+
+/* Footer */
+.footer {
+  background-color: #1f2937;
+  color: #f9faf8;
+  padding: 34px 0;
+}
+
+.footer__text {
+  text-align: center;
+}
